--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,29 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  flutter_native_splash: ^2.4.0
+  firebase_core: ^2.32.0
+  firebase_auth: ^4.20.0
+  get: ^4.6.6
+
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets\images\profile.png
+  color_dark: "#121212"
+  image_dark: assets\images\profile.png
+
+  android_12:
+    image: assets\images\profile.png
+    icon_background_color: "#ffffff"
+    image_dark: assets\images\profile.png
+    icon_background_color_dark: "#121212"
+  web: false
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -59,9 +78,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
